var Router -> const Router

--- a/demo/vaadin-router-code-splitting-demos.html
+++ b/demo/vaadin-router-code-splitting-demos.html
@@ -50,7 +50,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -86,7 +86,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const loadCustomBundle = (context) => {
             // This is one way of loading a bundle lazily (works for Polymer apps).
@@ -126,7 +126,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -166,7 +166,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
