--- a/demo/vaadin-router-lifecycle-callbacks-demos.html
+++ b/demo/vaadin-router-lifecycle-callbacks-demos.html
@@ -85,7 +85,7 @@
           });
 
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -140,7 +140,7 @@
           });
 
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -203,7 +203,7 @@
             }
           });
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -245,7 +245,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -302,7 +302,7 @@
             }
           });
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -343,7 +343,7 @@
           });
 
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -397,7 +397,7 @@
           });
 
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
