--- a/demo/vaadin-router-navigation-trigger-demos.html
+++ b/demo/vaadin-router-navigation-trigger-demos.html
@@ -57,7 +57,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -89,7 +89,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -128,7 +128,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
           const {POPSTATE} = Router.NavigationTrigger;
           Router.setTriggers(POPSTATE);
 
@@ -165,7 +165,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
