--- a/demo/vaadin-router-route-parameters-demos.html
+++ b/demo/vaadin-router-route-parameters-demos.html
@@ -38,7 +38,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -83,7 +83,7 @@
           Polymer({is: 'x-project-view'});
 
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -133,7 +133,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -161,7 +161,7 @@
         <div id="outlet"></div>
         <script>
           // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
-          // var Router = Vaadin.Router; // for vaadin-router.umd.js
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
