--- a/demo/vaadin-router-getting-started-demos.html
+++ b/demo/vaadin-router-getting-started-demos.html
@@ -17,7 +17,7 @@
     <pre><code>&lt;script type="module"&gt;
   import {Router} from 'https://unpkg.com/@vaadin/router';
 &lt;/script&gt;</code></pre>
-    <p><strong>In Webpack projects</strong> the <code>Router</code> class can
+    <p><strong>In Webpack / Rollup / Polymer CLI projects</strong> the <code>Router</code> class can
       be imported from the <code>@vaadin/router</code> npm package:
     </p>
     <code>import {Router} from '@vaadin/router';</code>
@@ -48,10 +48,11 @@
       <template preserve-content>
         <a href="/">Home</a>
         <a href="/users">Users</a>
-        <main id="outlet"></main>
+        <div id="outlet"></div>
 
         <script>
-          const {Router} = window.Vaadin;
+          // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           // select the DOM node where the router inserts route Web Components
           const outlet = document.getElementById('outlet');
@@ -102,9 +103,9 @@
         <a href="/users/kim">Kim</a>
         <a href="/about">About</a>
         <div id="outlet"></div>
-        <script type="module">
-          // import {Router} from '@vaadin/router';
-          const {Router} = window.Vaadin;
+        <script>
+          // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -131,9 +132,9 @@
         <a href="/users">All Users</a>
         <a href="/users/kim">Kim</a>
         <div id="outlet"></div>
-        <script type="module">
-          // import {Router} from '@vaadin/router';
-          const {Router} = window.Vaadin;
+        <script>
+          // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
@@ -165,9 +166,9 @@
       <template preserve-content>
         <div id="outlet"></div>
 
-        <script type="module">
-          // import {Router} from '@vaadin/router';
-          const {Router} = window.Vaadin;
+        <script>
+          // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
 
           const router = new Router(document.getElementById('outlet'));
           router.setRoutes([
