--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -79,9 +79,19 @@
             expect(() => router.setRoutes([{path: '/', bundle: () => {}}])).to.throw(Error);
           });
 
+          it('route should throw when created with bundle object without required keys', () => {
+            const router = new Vaadin.Router(outlet);
+            expect(() => router.setRoutes([{path: '/', bundle: {}}])).to.throw(Error);
+          });
+
           it('route should throw when created with unknown bundle extension', () => {
             const router = new Vaadin.Router(outlet);
             expect(() => router.setRoutes([{path: '/', bundle: 'test.html'}])).to.throw(Error);
+          });
+
+          it('route should throw when created with bundle object having keys with unknown extension', () => {
+            const router = new Vaadin.Router(outlet);
+            expect(() => router.setRoutes([{path: '/', bundle: {module: 'test.html'}}])).to.throw(Error);
           });
 
           it('should accept an options object as the 2nd argument', () => {
@@ -711,7 +721,10 @@
 
           it('should support loading bundle in the long format', async() => {
             router.setRoutes([
-              {path: '/', component: 'x-home-view', bundle: {src: existingBundlePath}},
+              {path: '/', component: 'x-home-view', bundle: {
+                module: existingBundlePath,
+                nomodule: existingBundlePath
+              }},
             ]);
             await router.render('/');
             expect(window[bundleVariableName]).to.equal(bundleVariableValue);
