replace `router.activeRoutes` with `router.locaiton`
 - in tests and demos
 - update the implementation

--- a/demo/vaadin-router-lifecycle-callbacks-demos.html
+++ b/demo/vaadin-router-lifecycle-callbacks-demos.html
@@ -377,7 +377,7 @@
             const params = event.detail.params;
 
             const breadcrumbs = document.querySelector('x-breadcrumbs');
-            breadcrumbs.items = router.activeRoutes
+            breadcrumbs.items = router.location.routes
               .filter(route => !!route.xBreadcrumb)
               .map(route => {
                 return {
