add location into `vaadin-router-location-changed`
 - rename `vaadin-router-route-changed` into `vaadin-router-location-changed`
 - add `location` into the event (replacing `pathname` and `params`)
 - update tests and demos

--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -1125,16 +1125,16 @@
         });
       });
 
-      describe('the global `vaadin-router-route-changed` event', () => {
+      describe('the global `vaadin-router-location-changed` event', () => {
         it('should be triggered after a completed navigation', async() => {
           router.setRoutes([
             {path: '/', component: 'x-home-view'},
           ]);
 
           const onRouteChanged = sinon.spy();
-          window.addEventListener('vaadin-router-route-changed', onRouteChanged);
+          window.addEventListener('vaadin-router-location-changed', onRouteChanged);
           await router.render('/');
-          window.removeEventListener('vaadin-router-route-changed', onRouteChanged);
+          window.removeEventListener('vaadin-router-location-changed', onRouteChanged);
 
           expect(onRouteChanged).to.have.been.called.once;
         });
@@ -1146,48 +1146,31 @@
           ]);
 
           const onRouteChanged = sinon.spy();
-          window.addEventListener('vaadin-router-route-changed', onRouteChanged);
+          window.addEventListener('vaadin-router-location-changed', onRouteChanged);
           await Promise.all([
             router.render('/'),
             router.render('/admin')
           ]);
-          window.removeEventListener('vaadin-router-route-changed', onRouteChanged);
+          window.removeEventListener('vaadin-router-location-changed', onRouteChanged);
 
           expect(onRouteChanged).to.have.been.called.once;
         });
 
-        it('should contain the new path as `event.detail.pathname`', async() => {
+        it('should contain the new location as `event.detail.location`', async() => {
           router.setRoutes([
             {path: '/admin', component: 'x-admin-view'},
           ]);
 
           const onRouteChanged = sinon.spy();
-          window.addEventListener('vaadin-router-route-changed', onRouteChanged);
+          window.addEventListener('vaadin-router-location-changed', onRouteChanged);
           await router.render('/admin');
-          window.removeEventListener('vaadin-router-route-changed', onRouteChanged);
+          window.removeEventListener('vaadin-router-location-changed', onRouteChanged);
 
           expect(onRouteChanged).to.have.been.called.once;
           expect(onRouteChanged.args[0].length).to.equal(1);
 
           const event = onRouteChanged.args[0][0];
-          expect(event.detail.pathname).to.equal('/admin');
-        });
-
-        it('should contain the route params as `event.detail.params`', async() => {
-          router.setRoutes([
-            {path: '/users/:user', component: 'x-users-view'},
-          ]);
-
-          const onRouteChanged = sinon.spy();
-          window.addEventListener('vaadin-router-route-changed', onRouteChanged);
-          await router.render('/users/42');
-          window.removeEventListener('vaadin-router-route-changed', onRouteChanged);
-
-          expect(onRouteChanged).to.have.been.called.once;
-          expect(onRouteChanged.args[0].length).to.equal(1);
-
-          const event = onRouteChanged.args[0][0];
-          expect(event.detail.params).to.deep.equal({user: '42'});
+          expect(event.detail.location).to.equal(router.location);
         });
 
         it('should contain the router instance as `event.detail.router`', async() => {
@@ -1196,9 +1179,9 @@
           ]);
 
           const onRouteChanged = sinon.spy();
-          window.addEventListener('vaadin-router-route-changed', onRouteChanged);
+          window.addEventListener('vaadin-router-location-changed', onRouteChanged);
           await router.render('/admin');
-          window.removeEventListener('vaadin-router-route-changed', onRouteChanged);
+          window.removeEventListener('vaadin-router-location-changed', onRouteChanged);
 
           expect(onRouteChanged).to.have.been.called.once;
           expect(onRouteChanged.args[0].length).to.equal(1);
