--- a/test/router/parent-layouts.spec.html
+++ b/test/router/parent-layouts.spec.html
@@ -189,7 +189,7 @@
       it('child layout: onBeforeEnter with redirect result amends previous path', async() => {
         router.setRoutes([
           {path: '/a', component: 'x-a', children: [
-            {path: '/b', action: onBeforeEnterAction('x-b', context => context.redirect('/d/e')), children: [
+            {path: '/b', action: onBeforeEnterAction('x-b', (location, commands) => commands.redirect('/d/e')), children: [
               {path: '/c', component: 'x-c'}
             ]}
           ]},
@@ -211,7 +211,7 @@
               {path: '/c', component: 'x-c'}
             ]}
           ]},
-          {path: '/d', action: onBeforeEnterAction('x-d', context => context.cancel()), children: [
+          {path: '/d', action: onBeforeEnterAction('x-d', (location, commands) => commands.prevent()), children: [
             {path: '/e', component: 'x-e'}
           ]}
         ]);
@@ -226,7 +226,7 @@
       it('child layout: onBeforeLeave with cancel result aborts current resolution', async() => {
         router.setRoutes([
           {path: '/a', component: 'x-a', children: [
-            {path: '/b', action: onBeforeLeaveAction('x-b', context => context.cancel()), children: [
+            {path: '/b', action: onBeforeLeaveAction('x-b', (location, commands) => commands.prevent()), children: [
               {path: '/c', component: 'x-c'}
             ]}
           ]},
