--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -117,7 +117,7 @@
       });
 
       describe('onBeforeEnter', () => {
-        it('should be called with the router context as the only argument', async() => {
+        it('should be called with 2 arguments: [location, commands]', async() => {
           const onBeforeEnter = sinon.spy();
           router.setRoutes([
             {path: '/', action: onBeforeEnterAction('x-home-view', onBeforeEnter)}
@@ -126,15 +126,17 @@
           await router.render('/');
 
           expect(onBeforeEnter).to.have.been.called.once;
-          expect(onBeforeEnter.args[0].length).to.equal(1);
+          expect(onBeforeEnter.args[0].length).to.equal(2);
 
-          const context = onBeforeEnter.args[0][0];
-          expect(context.pathname).to.equal('/');
-          expect(context.route.path).to.equal('/');
-          expect(context.cancel).to.be.a('function');
-          expect(context.redirect).to.be.a('function');
-          expect(context.component).to.be.an('undefined');
-          expect(context.next).to.be.an('undefined');
+          const location = onBeforeEnter.args[0][0];
+          expect(location.pathname).to.equal('/');
+          expect(location.route.path).to.equal('/');
+
+          const commands = onBeforeEnter.args[0][1];
+          expect(commands).to.be.an('object').that.is.not.null;
+
+          // const routerArg = onBeforeEnter.args[0][2];
+          // expect(routerArg).to.equal(router);
 
           expect(outlet.children[0].tagName).to.match(/x-home-view/i);
         });
@@ -151,9 +153,9 @@
           expect(outlet.children[0].tagName).to.match(/x-home-view/i);
         });
 
-        it('should be able to return a `cancel` result to prevent navigation', async() => {
+        it('should be able to return a `prevent` command to prevent navigation', async() => {
           router.setRoutes([
-            {path: '/', action: onBeforeEnterAction('whatever', context => context.cancel())},
+            {path: '/', action: onBeforeEnterAction('whatever', (location, commands) => commands.prevent())},
             {path: '/users', component: 'x-users-list'}
           ]);
 
@@ -164,9 +166,9 @@
           verifyActiveRoutes(router, ['/users']);
         });
 
-        it('should be able to return a `redirect` result to redirect navigation', async() => {
+        it('should be able to return a `redirect` command to redirect navigation', async() => {
           router.setRoutes([
-            {path: '/', action: onBeforeEnterAction('whatever', context => context.redirect('/users'))},
+            {path: '/', action: onBeforeEnterAction('whatever', (location, commands) => commands.redirect('/users'))},
             {path: '/users', component: 'x-users-list'}
           ]);
 
@@ -178,8 +180,8 @@
 
         it('should be able to have multiple redirects', async() => {
           router.setRoutes([
-            {path: '/', action: onBeforeEnterAction('x-redirect-component', context => context.redirect('/u'))},
-            {path: '/u', action: onBeforeEnterAction('x-redirect-component', context => context.redirect('/users'))},
+            {path: '/', action: onBeforeEnterAction('x-redirect-component', (location, commands) => commands.redirect('/u'))},
+            {path: '/u', action: onBeforeEnterAction('x-redirect-component', (location, commands) => commands.redirect('/users'))},
             {path: '/users', component: 'x-users-list'}
           ]);
 
@@ -191,9 +193,9 @@
 
         it('should fail on recursive redirects', async() => {
           router.setRoutes([
-            {path: '/', action: onBeforeEnterAction('x-redirect-component', context => context.redirect('/u'))},
-            {path: '/u', action: onBeforeEnterAction('x-redirect-component', context => context.redirect('/users'))},
-            {path: '/users', action: onBeforeEnterAction('x-redirect-component', context => context.redirect('/'))}
+            {path: '/', action: onBeforeEnterAction('x-redirect-component', (location, commands) => commands.redirect('/u'))},
+            {path: '/u', action: onBeforeEnterAction('x-redirect-component', (location, commands) => commands.redirect('/users'))},
+            {path: '/users', action: onBeforeEnterAction('x-redirect-component', (location, commands) => commands.redirect('/'))}
           ]);
 
           const onError = sinon.spy();
@@ -203,7 +205,7 @@
           expect(onError).to.have.been.called.once;
         });
 
-        it('should ignore any other return value than `cancel` or `redirect`', async() => {
+        it('should ignore any other return value than `prevent` or `redirect`', async() => {
           const values = [
             true,
             false,
@@ -270,8 +272,8 @@
             connectedCallback() {
               counter++;
             }
-            onBeforeLeave(context) {
-              return context.cancel();
+            onBeforeLeave(location, commands) {
+              return commands.prevent();
             }
           });
           router.setRoutes([
@@ -286,7 +288,7 @@
       });
 
       describe('onBeforeLeave', () => {
-        it('should be called with the router context as the only argument', async() => {
+        it('should be called with 2 arguments: [location, commands]', async() => {
           const onBeforeLeave = sinon.spy();
           router.setRoutes([
             {path: '/', action: onBeforeLeaveAction('x-home-view', onBeforeLeave)},
@@ -299,15 +301,17 @@
           await router.render('/users');
 
           expect(onBeforeLeave).to.have.been.called.once;
-          expect(onBeforeLeave.args[0].length).to.equal(1);
+          expect(onBeforeLeave.args[0].length).to.equal(2);
 
-          const context = onBeforeLeave.args[0][0];
-          expect(context.pathname).to.equal('/users');
-          expect(context.route.path).to.equal('/users');
-          expect(context.cancel).to.be.a('function');
-          expect(context.redirect).to.be.an('undefined');
-          expect(context.component).to.be.an('undefined');
-          expect(context.next).to.be.an('undefined');
+          const location = onBeforeLeave.args[0][0];
+          expect(location.pathname).to.equal('/users');
+          expect(location.route.path).to.equal('/users');
+
+          const commands = onBeforeLeave.args[0][1];
+          expect(commands).to.be.an('object').that.is.not.null;
+
+          // const routerArg = onBeforeLeave.args[0][2];
+          // expect(routerArg).to.equal(router);
 
           expect(outlet.children[0].tagName).to.match(/x-users-list/i);
         });
@@ -328,9 +332,9 @@
           expect(outlet.children[0].tagName).to.match(/x-users-list/i);
         });
 
-        it('should be able to return a `cancel` result to prevent navigation', async() => {
+        it('should be able to return a `prevent` command to prevent navigation', async() => {
           router.setRoutes([
-            {path: '/', action: onBeforeLeaveAction('x-home-view', context => context.cancel())},
+            {path: '/', action: onBeforeLeaveAction('x-home-view', (location, commands) => commands.prevent())},
             {path: '/users', component: 'x-users-list'},
           ]);
 
@@ -341,7 +345,7 @@
           verifyActiveRoutes(router, ['/']);
         });
 
-        it('should ignore any other return value than `cancel`', async() => {
+        it('should ignore any other return value than `prevent`', async() => {
           const values = [
             true,
             false,
@@ -416,8 +420,8 @@
             }
           });
           customElements.define('x-disallowed-view', class extends HTMLElement {
-            onBeforeEnter(context) {
-              return context.cancel();
+            onBeforeEnter(location, commands) {
+              return commands.prevent();
             }
           });
           router.setRoutes([
@@ -432,7 +436,7 @@
       });
 
       describe('onAfterLeave', () => {
-        it('should be called with the router context as the only argument', async() => {
+        it('should be called with 1 argument: [location]', async() => {
           const onAfterLeave = sinon.spy();
           router.setRoutes([
             {path: '/', action: onAfterLeaveAction('x-home-view', onAfterLeave)},
@@ -448,13 +452,12 @@
           expect(onAfterLeave).to.have.been.called.once;
           expect(onAfterLeave.args[0].length).to.equal(1);
 
-          const context = onAfterLeave.args[0][0];
-          expect(context.pathname).to.equal('/users');
-          expect(context.route.path).to.equal('/users');
-          expect(context.cancel).to.be.an('undefined');
-          expect(context.redirect).to.be.an('undefined');
-          expect(context.component).to.be.an('undefined');
-          expect(context.next).to.be.an('undefined');
+          const location = onAfterLeave.args[0][0];
+          expect(location.pathname).to.equal('/users');
+          expect(location.route.path).to.equal('/users');
+
+          // const routerArg = onAfterLeave.args[0][1];
+          // expect(routerArg).to.equal(router);
 
           expect(outlet.children[0].tagName).to.match(/x-users-list/i);
         });
@@ -508,7 +511,7 @@
       });
 
       describe('onAfterEnter', () => {
-        it('should be called with the router context as the only argument', async() => {
+        it('should be called with 1 argument: [location]', async() => {
           const onAfterEnter = sinon.spy();
           router.setRoutes([
             {path: '/', action: onAfterEnterAction('x-home-view', onAfterEnter)}
@@ -519,13 +522,12 @@
           expect(onAfterEnter).to.have.been.called.once;
           expect(onAfterEnter.args[0].length).to.equal(1);
 
-          const context = onAfterEnter.args[0][0];
-          expect(context.pathname).to.equal('/');
-          expect(context.route.path).to.equal('/');
-          expect(context.cancel).to.be.an('undefined');
-          expect(context.redirect).to.be.an('undefined');
-          expect(context.component).to.be.an('undefined');
-          expect(context.next).to.be.an('undefined');
+          const location = onAfterEnter.args[0][0];
+          expect(location.pathname).to.equal('/');
+          expect(location.route.path).to.equal('/');
+
+          // const routerArg = onAfterEnter.args[0][2];
+          // expect(routerArg).to.equal(router);
 
           expect(outlet.children[0].tagName).to.match(/x-home-view/i);
         });
