--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -689,6 +689,26 @@
             expect(elem.route.params).to.be.object;
             expect(elem.route.params.id).to.equal('1');
           });
+
+          it('should create new component instance for the same route with different parameters', async() => {
+            router.setRoutes([
+              {path: '/', component: 'x-home-view'},
+              {path: '/users/:id', component: 'x-users-view'},
+            ]);
+
+            await router.render('/users/1');
+            const elemOne = outlet.children[0];
+            expect(elemOne.tagName).to.match(/x-users-view/i);
+            expect(elemOne.route.params).to.be.object;
+            expect(elemOne.route.params.id).to.equal('1');
+
+            await router.render('/users/2');
+            const elemTwo = outlet.children[0];
+            expect(elemTwo.tagName).to.match(/x-users-view/i);
+            expect(elemTwo).to.not.equal(elemOne);
+            expect(elemTwo.route.params).to.be.object;
+            expect(elemTwo.route.params.id).to.equal('2');
+          });
         });
 
         describe('route object properties: order of execution', () => {
